--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Little Legends Academy</title>
     <script src="homepage.js"></script>
-    <link rel="stylesheet" type="text/css" href="homepage.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
     
 </head>
 <body>
@@ -49,7 +49,7 @@
         </div>
     </section>
 
-    <script src="homepage.js"></script>
+    <script src="function.js"></script>
 
 </body>
 </html>
