--- a/about-me-ll.html
+++ b/about-me-ll.html
@@ -15,7 +15,7 @@
             <span class="bar"></span>
         </div>
         <ul class="menu-items">
-            <li><a href="homepage.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="#">Services</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="calendar.html">Calendar</a></li>
