--- a/calendar.html
+++ b/calendar.html
@@ -9,7 +9,7 @@
 <body>
     <nav class="navbar">
         <ul>
-            <li><a href="homepage.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="about-me-ll.html">About Us</a></li>
             <li><a href="#">Services</a></li>
