--- a/contact.html
+++ b/contact.html
@@ -18,18 +18,14 @@
     <!-- Contact Form -->
     <div class="contact-form">
         <h2>Contact Us</h2>
-        <form action="https://formsubmit.co/jrdndnh@gmail.com" method="post">
+        <form action="https://formcarry.com/s/tvnp2tjreN" method="post" accept-charset="UTF-8">
             <div class="form-group">
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" required>
-            </div>
-            <div class="form-group">
                 <label for="email">Email:</label>
                 <input type="email" id="email" name="email" required>
-            </div>
-            <div class="form-group">
-                <label for="message">Message:</label>
-                <textarea id="message" name="message" rows="4" required></textarea>
+                <label for="textarea">Comment:</label>
+                <input type="text" id="textarea" name="comment" required>
             </div>
             <div class="form-group">
                 <button type="submit">Send Message</button>
